# abobuilder

./: .condarc  .gitignore  COMPILATION.md  README.md  environment.yml  meta.yaml  pyproject.toml  setup.py  versiontest.py
.github/workflows/: build_conda.yml  build_pypi.yml
abobuilder/: __init__.py  _version.py  abobuilder.py  element_table.py  multiline.py
docs/source/: conf.py  file_format.rst  index.rst  usage.rst
docs/source/_templates/: breadcrumbs.html
examples/: Makefile  ch4.py  co.py  co_colors.py  cubane.py  ethylene.py  neb.py
tests/: test_co.py  test_neb.py
