[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "abobuilder"
version = "0.5.0"
authors = [
  { name="Ivo Filot", email="i.a.w.filot@tue.nl" }
]
maintainers = [
    { name="Ivo Filot", email="i.a.w.filot@tue.nl" },
]
description = "abobuilder"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "scipy",
    "numpy",
    "numpy-stl",
    "pyqint",
    "pytessel",
    "zstandard",
    "ase",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["abobuilder*"]

[project.urls]
"Homepage" = "https://www.github.com/ifilot/abobuilder"
"Bug Tracker" = "https://www.github.com/ifilot/abobuilder/issues"
